# running-through-text

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  IDEAS.md  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: evals.yml
agent/: __init__.py  coach.py
apps/streamlit/: app.py
docs/adr/: 0001-structured-memory-plus-summary-no-pgvector.md  0002-single-agent-persistence-only-tools.md  0003-hybrid-guardrails-soft-guidance.md  0004-pace-as-primary-metric-no-rpe.md  0005-scenario-based-evals-pytest-delta-judge.md  0006-minimum-mvp-stack-streamlit-postgres-openrouter.md
evals/: README.md  budgets.json
evals/judges/: __init__.py  baseline.py  budgets.py  llm_judge.py
evals/scenarios/: test_coach_note.py  test_cost_budget.py  test_harm_reduction_judge.py  test_judge_and_baseline.py  test_longitudinal_coherence.py  test_recommendation_coherence_judge.py  test_register_checkin_extraction.py  test_register_workout_extraction.py  test_safety_triggers.py  test_wizard_extraction.py
memory/: __init__.py  coach_note.py  context.py
persistence/: __init__.py  db.py  schema.sql
safety/: __init__.py  triggers.py
