[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "running-through-text"
version = "0.1.0"
description = "Conversational virtual coach for road/trail running"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40",
    "openai>=1.50",
    "python-dotenv>=1.0",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["agent", "memory", "persistence", "evals", "safety"]

[tool.pytest.ini_options]
# `pytest evals/` runs everything not marked `integration` by default — the
# default `-m` selector below excludes the integration marker. Use
# `pytest -m light`, `-m heavy`, or `-m regression` to scope to a suite.
addopts = "-m 'not integration'"
markers = [
    "light: fast deterministic tests; run on every PR (~30s budget)",
    "heavy: includes LLM-as-judge or expensive scenarios; nightly",
    "regression: model regression suite; manual / on model swap",
    "integration: requires a running Postgres (skipped by default)",
]
